      - [x] Fix inbound middleware
      - [ ] Fix inbound transports
      - [ ] Consider creating a unified Unary or Caller interface that can be
            used for both inbound and outbound unary.
      - [x] Consider removing Body from Request and Response entirely, making
            them positional, to avoid separating and embedding Meta* for the
            streaming case.
      - [ ] Now that we propogate a Response struct back, the Response should hold the actual
            application error. Errors returned by the handler (not through the Response)
            could be considered fatal (T1995085). This affects transports and encodings.
            - [ ] JSON encoding
            - [ ] HTTP transport
- [x] Change Request and Response body to yarpc.Buffer type
      - [ ] Accumulate request bodies at the inbound
- [ ] yarpcrouter.Router needs to accept middleware to decorate registered
      procedures.
- [ ] Replace functional options in yarpcpeerlist with struct options
- [ ] Create an API in yarpcfx to register and obtain peer lists by name.
      Use this API to configure the chooser for an outbound in their transport fx package.
      Use this API to send updates from a peer list updater to a peer list in the updater fx package.
- [ ] yarpchttp needs to subsume responsibility for validating requests instead
      of leaving that to middleware registered in the dispatcher.
- [ ] Consider renaming HandlerSpecs to Routes
- [ ] Fix round robin tests, relaxing its requirements regarding lifecycle
      ordering, perhaps taking availability changes into account.
- [ ] Audit yarpcerrors, remove the ones that are no longer needed.
- [ ] Construct PRs with retroactive continuity.
- [ ] Nit: scrape name pid and change to just id throughout.
- [ ] Audit docs
- [ ] choose to use either `req` and `resp` or `request` and `response` as variable names for consistency.

Encodings:
- [x] Drop raw encoding
- [x] Port JSON encoding
- [ ] Port Thrift encoding