@@ -6,6 +6,7 @@
       - [x] Consider removing Body from Request and Response entirely, making
             them positional, to avoid separating and embedding Meta* for the
             streaming case.
+      - [ ] Incorporate implicit buffer pooling in yarpc.Buffer (using internal/bufferpool.Buffer)
       - [ ] Now that we propogate a Response struct back, the Response should hold the actual
             application error. Errors returned by the handler (not through the Response)
             could be considered fatal (T1995085). This affects transports and encodings.
